<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SearchFragment">

    <Button
        android:id="@+id/add_tweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round_shape_btn"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/new_tweet_user_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_tweet" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/add_a_new_tweet"
        android:textColor="@color/colorPrimary"
        android:textSize="23sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/add_tweet"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/new_tweet_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@android:color/transparent"
        android:hint="@string/what_s_new"
        android:maxLength="280"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/new_tweet_user_icon"
        app:layout_constraintEnd_toEndOf="@+id/add_tweet"
        app:layout_constraintStart_toEndOf="@+id/new_tweet_user_icon"
        app:layout_constraintTop_toTopOf="@+id/new_tweet_user_icon"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>