<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.twitterok.viewmodel.OwnerViewModel" />
    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image_view"
                android:layout_width="78dp"
                android:layout_height="78dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:profileImgBitmap="@{viewModel.imageBitmap}"
                tools:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/default_padding">

                <TextView
                    android:id="@+id/tv_user_name"
                    style="@style/TextView.Primary.Header"
                    android:layout_marginTop="@dimen/margin_tv"
                    android:text="@{viewModel.name}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/user_image_view"
                    tools:text="Name" />

                <TextView
                    android:id="@+id/tv_user_nickname"
                    style="@style/TextView.Secondary"
                    android:layout_marginTop="@dimen/margin_tv"
                    android:text="@{viewModel.screenName}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_user_name"
                    tools:text="Nickname" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_user_description"
            style="@style/TextView.Primary"
            android:layout_marginTop="@dimen/margin_tv"
            android:text="@{viewModel.description}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_user_nickname"
            tools:text="Description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_user_icon_calendar"
                style="@style/TextIcon"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/margin_tv"
                android:text="@string/calendar_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_user_description" />

            <TextView
                android:id="@+id/tv_user_calendar"
                style="@style/TextView.Secondary"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/margin_tv"
                android:text="@{viewModel.createdAt}"
                app:layout_constraintStart_toEndOf="@id/tv_user_icon_calendar"
                app:layout_constraintTop_toBottomOf="@id/tv_user_description"
                tools:text="Location" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_user_count_following"
                style="@style/TextView.Primary.Bold"
                android:layout_marginTop="@dimen/margin_tv"
                android:text="@{viewModel.followingCount}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_user_calendar"
                tools:text="4" />

            <TextView
                android:id="@+id/tv_user_following"
                style="@style/TextView.Secondary"
                android:layout_marginStart="5dp"
                android:layout_marginTop="@dimen/margin_tv"
                android:text="@string/following"
                app:layout_constraintStart_toEndOf="@id/tv_user_count_following"
                app:layout_constraintTop_toBottomOf="@id/tv_user_calendar" />

            <TextView
                android:id="@+id/tv_user_count_followers"
                style="@style/TextView.Primary.Bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/margin_tv"
                android:text="@{viewModel.followersCount}"
                app:layout_constraintStart_toEndOf="@id/tv_user_following"
                app:layout_constraintTop_toBottomOf="@id/tv_user_calendar"
                tools:text="5" />

            <TextView
                android:id="@+id/tv_user_followers"
                style="@style/TextView.Secondary"
                android:layout_marginStart="5dp"
                android:layout_marginTop="@dimen/margin_tv"
                android:text="@string/followers"
                app:layout_constraintStart_toEndOf="@id/tv_user_count_followers"
                app:layout_constraintTop_toBottomOf="@id/tv_user_calendar" />
        </LinearLayout>
    </LinearLayout>
</layout>