<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.twitterok.databinding.viewmodel.TweetViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{(v) -> viewModel.clickOnTweet(v)}"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="@dimen/default_padding">
                <!-- TODO add avatar downloader method from VM -->
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_tweet_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="@dimen/margin_tv"
                    android:onClick="@{(v) -> viewModel.clickOnProfileImage(v)}"
                    app:civ_border_color="@color/colorAccent"
                    app:civ_border_width="0.5dp"
                    app:profileImage="@{viewModel.profileImageUrl}"
                    tools:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_tweet_author_name"
                            style="@style/TextView.Primary.Bold"
                            android:layout_marginStart="@dimen/margin_tv"
                            android:text="@{viewModel.author}"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Author" />

                        <TextView
                            android:id="@+id/tv_tweet_author_nickname"
                            style="@style/TextView.Secondary"
                            android:layout_width="0dp"
                            android:layout_marginStart="@dimen/margin_tv"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:text="@{viewModel.nickname}"
                            app:layout_constraintEnd_toStartOf="@+id/tv_tweet_icon_date"
                            app:layout_constraintStart_toEndOf="@id/tv_tweet_author_name"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Nickname" />

                        <TextView
                            android:id="@+id/tv_tweet_icon_date"
                            style="@style/TextIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/clock_icon"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/tv_tweet_date"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_tweet_date"
                            style="@style/TextView.Secondary"
                            android:layout_gravity="end"
                            android:layout_marginStart="@dimen/margin_tv"
                            android:text="@{viewModel.date}"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Nov.27" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/tv_tweet_author_description"
                        style="@style/TextView.Primary"
                        android:layout_marginStart="@dimen/margin_tv"
                        android:autoLink="web"
                        android:linksClickable="true"
                        android:text="@{viewModel.discription}"
                        tools:text="Today_I_have_gonna_show_you_a_small_pines_and_a_large_vagina_with_a_toys_into" />
                    <!-- TODO add main picture downloader method from VM -->
                    <ImageView
                        android:id="@+id/iv_main_tweet_picture"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginStart="@dimen/margin_tv"
                        android:layout_marginTop="@dimen/margin_tv"
                        android:layout_marginBottom="@dimen/margin_tv"
                        android:adjustViewBounds="true"
                        android:background="@drawable/round_shape"
                        android:scaleType="centerCrop"
                        app:contentImage="@{viewModel.mediaEntitiesUrl}" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_tv"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_tweet_like_icon"
                                style="@style/TextIcon"
                                android:text="@string/retweet_icon" />

                            <TextView
                                android:id="@+id/tv_tweet_like_count"
                                style="@style/TextView.Secondary"
                                android:layout_marginStart="@dimen/margin_tv"
                                android:text="@{viewModel.likeCount}"
                                tools:text="0" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_tweet_retweet_icon"
                                style="@style/TextIcon"
                                android:text="@string/like_icon" />

                            <TextView
                                android:id="@+id/tv_tweet_retweet_count"
                                style="@style/TextView.Secondary"
                                android:layout_marginStart="@dimen/margin_tv"
                                android:text="@{viewModel.retweetCount}"
                                tools:text="0" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#50BBBBBB" />
    </LinearLayout>
</layout>
